# uav-mission-intelligence-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
.streamlit/: config.toml
dashboard/: uav_mission_dashboard.html
data/scenarios/: area_search_low_bandwidth.json  expanded_challenge_set.json  no_fly_zone_replan.json  target_tracking_multi_uav.json
docs/: engineering.md  maintenance.md
docs/superpowers/plans/: 2026-07-08-benchmark-v2-dashboard-engineering.md  2026-07-08-langgraph-trajectory-intent.md  2026-07-08-mission-execution-visualization.md  2026-07-09-interactive-demo.md  2026-07-09-rag-vector-retrieval.md  2026-07-09-swarm-algorithms.md  2026-07-09-swarm-environment.md  (+2 more)
examples/: example_output.json  mission_zh.txt  swarm_coordinator_demo.py  swarm_dialogue_demo.py  trajectory_intent_example.json
results/: deepseek_provider_comparison_2026-07-09.json  example_evaluation.json
src/uav_mission_agent/: __init__.py  agent_graph.py  api_cli.py  benchmark.py  benchmark_v2.py  cli.py  costing.py  dashboard.py  demo_app.py  demo_cli.py  demo_service.py  embeddings.py  evaluator.py  intent_recognition.py  knowledge_base.py  langgraph_workflow.py  llm_provider.py  mission_visualization.py  models.py  planner.py  retrievers.py  scenario_loader.py  schemas.py  streamlit_app.py  swarm_algorithms.py  swarm_coordinator.py  swarm_demo.py  swarm_dialogue.py  swarm_environment.py  swarm_models.py  swarm_visualization.py  task_parser.py  trajectory.py  workflow.py
tests/: test_agent_graph.py  test_benchmark.py  test_benchmark_dataset.py  test_benchmark_v2.py  test_cli.py  test_costing.py  test_dashboard.py  test_demo_app.py  test_demo_cli.py  test_demo_service.py  test_embeddings.py  test_evaluator.py  test_intent_recognition.py  test_knowledge_retrieval.py  test_langgraph_workflow.py  test_license.py  test_llm_provider.py  test_mission_visualization.py  test_readme_assets.py  test_scenario_loader.py  test_schema_output.py  test_streamlit_app.py  test_swarm_algorithms.py  test_swarm_coordinator.py  test_swarm_demo.py  test_swarm_dialogue.py  test_swarm_environment.py  test_swarm_models.py  test_swarm_visualization.py  test_task_parser.py  test_trajectory.py  test_workflow.py
(+11 files in other folders)
