[project]
name = "uav-mission-intelligence-agent"
version = "0.1.0"
description = "Offline MVP for a UAV mission planning LLM/Agent project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
rag-faiss = ["faiss-cpu>=1.8"]
rag-chroma = ["chromadb>=0.5"]
rag = [
    "faiss-cpu>=1.8",
    "chromadb>=0.5",
]
demo = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
uav-mission-agent = "uav_mission_agent.cli:main"
uav-mission-agent-demo = "uav_mission_agent.demo_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
